@@ -1,5 +1,6 @@
 0.7.4
 - In pscap, remove unused code
+- Add CAPNG_INIT_SUPP_GRP to capng_change_id
 
 0.7.3
 - Make sure stderr is used consistently in utils
